--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "routes": [
-      {"src": "/(.*)","dest": "https://fugon.herokuapp.com/$1"}
+      {"src": "/(.*)","dest": "https://thecatholichighschool.org/$1"}
   ]
 }
